--- a/Lesson15/package.json
+++ b/Lesson15/package.json
@@ -20,6 +20,7 @@
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
+    "babel-loader": "^8.0.6",
     "webpack": "^4.32.0",
     "webpack-cli": "^3.3.2"
   },
